--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,11 +1,6 @@
-.container {
-    max-width: 1500px;
-    padding: 10px;
-}
-
-.main-container {
+.main-layout {
     display: grid;
-    grid-template-columns: 20px 1fr 20px;
+    grid-template-columns: 1fr;
 
     > * {
         grid-column: 2;
@@ -15,17 +10,11 @@
         }
     }
 
-    @include for-narrow-layout {
-        grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $mobile-breakpoint)
-            minmax(20px, 1fr);
-    }
     @include for-normal-layout {
         grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $narrow-breakpoint)
-            minmax(20px, 1fr);
+            20px
+            minmax(auto, $normal-breakpoint)
+            20px;
     }
     @include for-wide-layout {
         grid-template-columns: 
