--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -12,4 +12,4 @@ $neutral-clr: hsl(0, 0%, 100%);
 // Breakpoints
 $mobile-breakpoint: 375px;
 $normal-breakpoint: 768px;
-$narrow-breakpoint: 1440px;
+$wide-breakpoint: 1440px;
