--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,7 +2,6 @@
 @import "setup/variables";
 @import "setup/functions";
 @import "setup/mixins";
-@import "setup/typography";
 
 // Basics
 @import "basics/base";
@@ -10,3 +9,4 @@
 @import "basics/layout";
 
 // Components
+@import "cmps//app-header";
