add fonts, define global icon cmp

--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -2,3 +2,8 @@
     font-family: OpenSans;
     src: url(../../fonts/OpenSans-Regular.ttf);
 }
+
+@font-face {
+    font-family: Raleway;
+    src: url(../../fonts/Raleway-Regular.ttf);
+}
