--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,4 +9,9 @@
 @import "basics/layout";
 
 // Components
-@import "cmps//app-header";
+@import "cmps/app-header";
+@import "cmps/feature";
+@import "cmps/review";
+
+// Views
+@import "views/home-view.scss";
